feature : Updated index.html File

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </section>
             </section>
 
-            <!-- Device : JioPhone 2 -->
+            <!-- Devices : JioPhone 2, Galaxy Fold -->
             <section class="extra-small-devices">
                 <p class="error">大変申し訳ございませんですが、この端末では内容を表示できません。</p>
                 <br/>
